--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <i class="fas fa-phone-alt"></i> +91 93240 30815 ·
                         <a href="mailto:amogh2599@gmail.com"><i class="far fa-envelope"></i> amogh2599@gmail.com</a> · 
                         <a href="mailto:f20160393@alumni.bits-pilani.ac.in"><i class="far fa-envelope"></i> f20160393@alumni.bits-pilani.ac.in</a> · 
-                        <a href="https://drive.google.com/file/d/1kLmsSrhnVnZBMlmo3vxrh2gy-YZVSxvj/view?usp=sharing" target="_blank"><i class="fas fa-file"></i> My CV</a>
+                        <a href="https://drive.google.com/file/d/1WQYVy7-bCH1EyWbUwP6FT34_03ojI84d/view?usp=sharing" target="_blank"><i class="fas fa-file"></i> My CV</a>
                     </div>
                     <p class="lead mb-5">
                         I am a BITS Pilani graduate and I majored in Electronics Engineering. 
@@ -73,13 +73,24 @@
                     <h2 class="mb-5"><span class="text-grad">Experience</span></h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Machine Learning Engineer</h3>
+                            <div class="subheading mb-3">DeepEdge, Hyderabad, India.</div>
+                            <p>
+                                Trained a custom MaskRCNN model for instance segmentation and added OpenCV based post-processing. Built an auto-annotation pipeline which saved the annotation team a lot of effort.
+                            </p>
+
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2020 - May 2021</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Computer Vision Research Fellow</h3>
                             <div class="subheading mb-3">DreamVu Inc., Hyderabad, India.</div>
                             <p>
-                                Working on the calibration of the latest iteration of PAL - world's first 360° omnidirectional stereo and depth sensor, and deploying the camera for computer vision tasks like detection, tracking etc based on client requirements.
+                                Worked on calibration of PAL - world’s first 360 stereo and depth sensor. Deployed EfficientDet for custom object detection on edge devices like Jetson Nano from panoramas captured by PAL.
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2020 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2020 - October 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
