--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                     <p class="lead mb-5">
                         I am a BITS Pilani graduate and I majored in Electronics Engineering. 
-                        My interests lie at the intersection of Computer Vision and Deep Learning and their applications in the field of Robotics.  
+                        My interests lie at the intersection of Computer Vision and Deep Learning.  
                         <br><br> 
                         <a class="js-scroll-trigger" href="#experience">
                             <span class="text-grad"><b>Scroll to know more!</b></span>
