--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                         <span class="text-grad">Amogh Jayant Dabholkar</span> 
                     </h1>
                     <div class="subheading mb-5">
-                        <i class="fas fa-phone-alt"></i> +91 93240 30815 ·
-                        <a href="mailto:amogh2599@gmail.com"><i class="far fa-envelope"></i> amogh2599@gmail.com</a> · 
-                        <a href="mailto:f20160393@alumni.bits-pilani.ac.in"><i class="far fa-envelope"></i> f20160393@alumni.bits-pilani.ac.in</a> · 
+                        <i class="fas fa-phone-alt"></i> +91 9324030815 ·
+                        <a href="https://scholar.google.com/citations?user=bc7-83wAAAAJ&hl=en"><i class="far fa-envelope"></i> Google Scholar profile</a> · 
+                        <a href="mailto:f20160393g@alumni.bits-pilani.ac.in"><i class="far fa-envelope"></i> f20160393g@alumni.bits-pilani.ac.in</a> · 
                         <a href="https://drive.google.com/file/d/1rMV0ZSQeQIsMMhFC2HhWN8iDCqDHRooX/view?usp=sharing" target="_blank"><i class="fas fa-file"></i> My CV</a>
                     </div>
                     <p class="lead mb-5">
