--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <h3 class="mb-0">Machine Learning Engineer</h3>
                             <div class="subheading mb-3">DeepEdge, Hyderabad, India.</div>
                             <p>
-                                Trained a custom MaskRCNN model for instance segmentation and added OpenCV based post-processing. Built an auto-annotation pipeline which saved the annotation team a lot of effort.
+                                Trained a Mask RCNN model on Tensorflow2 for unconventional object classes with necessary preprocessing and refinement of predicted masks using OpenCV. Set up a model assisted annotation pipeline on CVAT to accelerate manual annotation and iteratively improve the model.
                             </p>
 
                         </div>
